--- a/infrastructure/helpers/integration-tests.yaml
+++ b/infrastructure/helpers/integration-tests.yaml
@@ -49,7 +49,7 @@
   command:
   args:
     argv:
-      - mull-cxx
+      - mull-cxx-{{ llvm_major }}
       - -mutators=cxx_add_to_sub
       - -compilation-flags=--sysroot={{ SDKROOT }} -isystem {{ llvm_dir }}/include/c++/v1 -isystem {{ llvm_dir }}/lib/clang/{{ llvm_version }}/include
       - -compdb-path={{ working_dir }}/integration/fmt.build.dir/compile_commands.json
@@ -87,7 +87,7 @@
   command:
   args:
     argv:
-      - mull-cxx
+      - mull-cxx-{{ llvm_major }}
       - -mutators=cxx_add_to_sub
       - -compilation-flags=--sysroot={{ SDKROOT }} -isystem {{ llvm_dir }}/lib/clang/{{ llvm_version }}/include -I{{ working_dir }}/integration/openssl-no-shared/include -I{{ working_dir }}/integration/openssl-no-shared/crypto/include -I{{ working_dir }}/integration/openssl-no-shared
       - -linker={{ llvm_dir }}/bin/clang
