--- a/.github/workflows/ci-ubuntu-18.yml
+++ b/.github/workflows/ci-ubuntu-18.yml
@@ -2,7 +2,6 @@ name: CI Ubuntu 18.04
 
 env:
   DISTR_REPO: "ubuntu/bionic"
-  LLVM_RELEASE: "10.0"
   CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
 
 on:
@@ -82,7 +81,7 @@ jobs:
             -e mull_version=${{ steps.settings.outputs.version }}${{ steps.settings.outputs.suffix }} \
             --verbose
       - name: Publish package
-        if: matrix.LLVM_VERSION == env.LLVM_RELEASE && env.CLOUDSMITH_API_KEY != null
+        if: env.CLOUDSMITH_API_KEY != null
         run: |
           env LC_ALL=C.UTF-8 LANG=C.UTF-8 cloudsmith push deb mull-project/mull-${{ steps.settings.outputs.channel }}/${{ env.DISTR_REPO }} infrastructure/packages/`cat infrastructure/PACKAGE_FILE_NAME`.deb
       - name: Move package
@@ -90,7 +89,7 @@ jobs:
           mkdir -p /tmp/packages
           mv infrastructure/packages/`cat infrastructure/PACKAGE_FILE_NAME`.deb /tmp/packages/`cat infrastructure/PACKAGE_FILE_NAME`.deb
       - name: Attach package to the tag
-        if: matrix.LLVM_VERSION == env.LLVM_RELEASE && contains(github.ref, 'refs/tags/')
+        if: contains(github.ref, 'refs/tags/')
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
