--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: macOS-latest
     strategy:
       matrix:
-        LLVM_VERSION: ["6.0", "7.0", "8.0", "9.0", "10.0", "11.0", "12.0"]
+        LLVM_VERSION: ["6.0", "7.0", "8.0", "9.0", "10.0", "11.0", "12.0", "13.0"]
 
     steps:
       - uses: actions/checkout@v1
