--- a/.gitmodules
+++ b/.gitmodules
@@ -9,6 +9,7 @@
 [submodule "vendor/libirm"]
 	path = vendor/libirm
 	url = https://github.com/mull-project/libirm.git
+	branch = main
 [submodule "vendor/spdlog"]
 	path = vendor/spdlog
 	url = https://github.com/gabime/spdlog.git
