Add Patches Reporter
This reporter is available as `Patches`. It generates a patch for each mutant.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -39,6 +39,7 @@ set(mull_sources
   Reporters/SourceCodeReader.cpp
   Reporters/SourceManager.cpp
   Reporters/SQLiteReporter.cpp
+  Reporters/PatchesReporter.cpp
 
   SourceLocation.cpp
 
