--- a/tests-lit/lit.cfg
+++ b/tests-lit/lit.cfg
@@ -17,10 +17,6 @@ def get_os_filename_string():
     print("error: lit.cfg could not detect OS")
     return "Unknown"
 
-def get_mull_portable_exec(llvm_path):
-    components = [ mull_cxx ]
-    return ' '.join(components)
-
 
 config.name = "Mull integration tests"
 config.test_format = lit.formats.ShTest("0")
@@ -35,29 +31,24 @@ mull_cxx = os.environ.get('mull_cxx', '')
 mull_runner = os.environ.get('mull_runner', '')
 mull_frontend_cxx = os.environ.get('mull_frontend_cxx', '')
 filecheck = os.environ.get('filecheck', '')
-llvm_path = os.environ.get('PATH_TO_LLVM', '')
 llvm_major_version = os.environ.get('LLVM_VERSION_MAJOR', '')
 test_cxx_flags = os.environ.get('TEST_CXX_FLAGS', '')
 python3 = os.environ.get('python3', '')
 
-assert llvm_path
 assert llvm_major_version
 assert test_cxx_flags
 
 test_cxx_flags = unescape_string(test_cxx_flags)
-
-portable_mull_exec = get_mull_portable_exec(llvm_path)
 
 config.substitutions.append(('%CURRENT_DIR', current_dir))
 config.substitutions.append(('%clang_cc', clang_cc))
 config.substitutions.append(('%clang_cxx', clang_cxx))
 config.substitutions.append(('%sysroot', os.environ.get('sysroot', '')))
 config.substitutions.append(('%llvm_profdata', llvm_profdata))
-config.substitutions.append(('%mull_cxx', portable_mull_exec))
+config.substitutions.append(('%mull_cxx', mull_cxx))
 config.substitutions.append(('%mull_runner', mull_runner))
 config.substitutions.append(('%mull_frontend_cxx', mull_frontend_cxx))
 config.substitutions.append(('%filecheck', filecheck))
-config.substitutions.append(('%LLVM_PATH', llvm_path))
 config.substitutions.append(('%TEST_CXX_FLAGS', test_cxx_flags))
 config.substitutions.append(('%python3', python3))
 
