--- a/.github/workflows/ci-ubuntu-18.yml
+++ b/.github/workflows/ci-ubuntu-18.yml
@@ -22,6 +22,15 @@ jobs:
         LLVM_VERSION: ["6.0", "7.0", "8.0", "9.0", "10.0"]
 
     steps:
+      - name: For debugging
+        run: |
+          cat /etc/os-release
+      - name: For debugging
+        run: |
+          env | sort
+      - name: For debugging
+        run: |
+          cat $GITHUB_EVENT_PATH
       - name: Install software
         run: |
           apt-get update && apt-get install -y software-properties-common
@@ -31,12 +40,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - name: For debugging
-        run: |
-          env | sort
-      - name: For debugging
-        run: |
-          cat $GITHUB_EVENT_PATH
       - name: Set build settings
         id: settings
         run: |
