Use LLVM from homebrew on macOS

--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -14,10 +14,10 @@ on:
 jobs:
   test:
     name: LLVM ${{ matrix.LLVM_VERSION }}
-    runs-on: macOS-latest
+    runs-on: macos-11
     strategy:
       matrix:
-        LLVM_VERSION: ["6.0", "7.0", "8.0", "9.0", "10.0", "11.0", "12.0", "13.0"]
+        LLVM_VERSION: ["8.0", "9.0", "11.0", "12.0", "13.0"]
 
     steps:
       - uses: actions/checkout@v1
