--- a/tests-lit/lit.cfg
+++ b/tests-lit/lit.cfg
@@ -62,4 +62,6 @@ if int(llvm_major_version) <= 10:
 
 if platform.system() == 'Darwin':
   config.available_features.add('MACOS')
+else:
+  config.available_features.add('LINUX')
 
